--- a/Application.yaml
+++ b/Application.yaml
@@ -13,8 +13,8 @@ spec:
         app: project-k8s
     spec:
       containers:
-      - name: project-k8s
-        image: http://479984738014.dkr.ecr.ap-south-1.amazonaws.com/project1:latest
+      - name: project-k8s     
+        image: 479984738014.dkr.ecr.ap-south-1.amazonaws.com/project:latest
         ports:
         - containerPort: 8080  
 
